# HandoffBench-AAAI

./: .gitignore  DATA_LICENSE.md  LICENSE  Makefile  NOTICE  PROJECT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
configs/: confirmatory_v2.yaml  confirmatory_v2_matrix.json  confirmatory_v2_model_snapshots.json  confirmatory_v3.4.1.yaml  confirmatory_v3.4.yaml  confirmatory_v3.yaml  confirmatory_v3_matrix.json  confirmatory_v3_model_snapshots.v2.json  confirmatory_v3_model_snapshots.v3.json  factorial.yaml  pilot.yaml
data/: README.md
outputs/: README.md
paper/: ReproducibilityChecklist_draft.tex  checklist_standalone.tex  main.tex  references.bib
release/: ANONYMOUS_SUPPLEMENT_README.md  DATA_AND_MODEL_CARD.md  RELEASE_SCOPE.md  SUBMISSION_ARTIFACTS.sha256
research/: aaai27_format_audit.md  aaai27_reproducibility_checklist_status.md  aaai_plan.md  action_interface.md  action_name_leakage_audit_v2.json  action_name_leakage_audit_v2.md  annotation_protocol.md  annotation_provenance_correction_v1.json  annotation_provenance_correction_v1.md  annotator_a_one_page_card.md  candidate_audit_v2.md  candidate_dev_overlap_audit.json  candidate_dev_overlap_audit.md  candidate_v2_annotation_execution_guide.md  candidate_v2_datasheet.md  completion_audit.md  confirmatory_execution_dry_run.md  confirmatory_v3.3_execution_disposition.json  confirmatory_v3.4.1_execution_audit.md  confirmatory_v3.4_pre_call_startup_correction.md  confirmatory_v3_leakage_overlap_audit.json  confirmatory_v3_leakage_overlap_audit.md  construct_validity_audit_v2.json  dev_results_report.md  (+31 more)
(+463 files in other folders)
