[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "handoffbench"
version = "0.1.0"
description = "Benchmarking state-transfer fidelity at multi-agent handoff boundaries"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23",
  "pydantic>=2.10",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.9"]
analysis = ["numpy>=2.1", "pandas>=2.2", "scipy>=1.14", "matplotlib>=3.9", "seaborn>=0.13"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
